--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "envalid": "^7.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0"
   }
 }
