--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/http-errors": "^2.0.1",
     "@types/morgan": "^1.9.5",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
@@ -26,9 +27,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.3.1",
     "envalid": "^7.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0"
